==> rusefi/ChibiOS/os/hal/ports/AT32/AT32F4xx/hal_efl_lld.c <==
#include <string.h>
#include "hal.h"
#define AT32_FLASH_LINE_SIZE                (4)
#define AT32_FLASH_LINE_MASK                (AT32_FLASH_LINE_SIZE - 1U)
#define FLASH_PDKEY1                        0x04152637U
#define FLASH_PDKEY2                        0xFAFBFCFDU
#define FLASH_KEY1                          0x45670123U
#define FLASH_KEY2                          0xCDEF89ABU
#define FLASH_OPTKEY1                       0x08192A3BU
#define FLASH_OPTKEY2                       0x4C5D6E7FU
#define FLASH_STS_OPERR                      FLASH_STS_SOP

static inline void at32_flash_lock(EFlashDriver *eflp) {

  eflp->flash->CTRL |= FLASH_CTRL_LOCK;
}

static inline void at32_flash_enable_pgm(EFlashDriver *eflp) {

  /* Enable programming. */
  eflp->flash->CTRL |= FLASH_CTRL_PRGM;
}

static inline void at32_flash_disable_pgm(EFlashDriver *eflp) {

  eflp->flash->CTRL &= ~FLASH_CTRL_PRGM;
}

static inline void at32_flash_wait_busy(EFlashDriver *eflp) {

  /* Wait for busy bit clear.*/
  while ((eflp->flash->STS & FLASH_STS_OBF) != 0U) {
  }
}

static inline size_t at32_flash_get_size(void) {
  return (*(uint32_t*)(AT32_FLASH_SIZE_REGISTER)) * AT32_FLASH_SIZE_SCALE;
}

static inline flash_error_t at32_flash_check_errors(EFlashDriver *eflp) {
  uint32_t sr = eflp->flash->STS;

  /* Clearing error conditions.*/
  eflp->flash->STS = sr & (FLASH_STS_PRGMERR | FLASH_STS_EPPERR);

  /* Some errors are only caught by assertion.*/
  osalDbgAssert((sr & 0) == 0U, "unexpected flash error");

  /* Decoding relevant errors.*/
  if ((sr & FLASH_STS_PRGMERR) != 0U) {
    return FLASH_ERROR_HW_FAILURE;
  }

  if ((sr & FLASH_STS_EPPERR) != 0U) {
    return eflp->state == FLASH_PGM ? FLASH_ERROR_PROGRAM : FLASH_ERROR_ERASE;
  }

  return FLASH_NO_ERROR;
}

void efl_lld_init(void) {

  /* Driver initialization.*/
  eflObjectInit(&EFLD1);
  eflObjectInit(&EFLD2);
  EFLD1.flash = FLASH1;
  /* Find the size of the flash and set descriptor reference. */
  uint8_t i;
  for (i = 0; i < (sizeof(efl_lld_flash_sizes) / sizeof(efl_lld_size_t)); i++) {
    if (efl_lld_flash_sizes[i].desc[0].size + efl_lld_flash_sizes[i].desc[1].size ==
        at32_flash_get_size()) {
      EFLD1.descriptor = &efl_lld_flash_sizes[i].desc[0];
      if (efl_lld_flash_sizes[i].desc[1].size) {
        /* We have second bank! */
        EFLD2.descriptor = &efl_lld_flash_sizes[i].desc[1];
        EFLD2.flash = FLASH2;
      } else {
        EFLD2.descriptor = NULL;
        EFLD2.flash = NULL;
      }
      return;
    }
  }
  osalDbgAssert(false, "invalid flash configuration");
}

void efl_lld_start(EFlashDriver *eflp) {
  at32_flash_unlock(eflp);
  eflp->flash->CTRL = 0x00000000U;
}

flash_error_t efl_lld_program(void *instance, flash_offset_t offset,
                              size_t n, const uint8_t *pp) {
  EFlashDriver *devp = (EFlashDriver *)instance;
  const flash_descriptor_t *bank;
  flash_error_t err = FLASH_NO_ERROR;

  osalDbgCheck((instance != NULL) && (pp != NULL) && (n > 0U));
  bank = efl_lld_get_descriptor(instance);
  osalDbgCheck(bank != NULL);
  osalDbgCheck((size_t)offset + n <= (size_t)bank->size);
  osalDbgAssert((devp->state == FLASH_READY) || (devp->state == FLASH_ERASE),
                "invalid state");

  /* No programming while erasing.*/
  if (devp->state == FLASH_ERASE) {
    return FLASH_BUSY_ERASING;
  }

  /* FLASH_PGM state while the operation is performed.*/
  devp->state = FLASH_PGM;

  /* Clearing error status bits.*/
  at32_flash_clear_status(devp);

  /* Enabling PGM mode in the controller.*/
  at32_flash_enable_pgm(devp);

  /* Actual program implementation.*/
  while (n > 0U) {
    volatile uint32_t *address;

    /* Create an array of sufficient size to hold line(s). */
    union {
      uint32_t  w[AT32_FLASH_LINE_SIZE / sizeof(uint32_t)];
      uint16_t  h[AT32_FLASH_LINE_SIZE / sizeof(uint16_t)];
      uint8_t   b[AT32_FLASH_LINE_SIZE / sizeof(uint8_t)];
    } line;

    /* Unwritten bytes are initialized to all ones.*/
    uint8_t i;
    for (i = 0; i < bank->page_size; i++) {
      line.b[i] = 0xFF;
    }

    /* Programming address aligned to flash lines.*/
    address = (volatile uint32_t *)(bank->address +
                                    (offset & ~AT32_FLASH_LINE_MASK));

    /* Copying data inside the prepared line(s).*/
    do {
      line.b[offset & AT32_FLASH_LINE_MASK] = *pp;
      offset++;
      n--;
      pp++;
    }
    while ((n > 0U) & ((offset & AT32_FLASH_LINE_MASK) != 0U));

    /* Programming line according to parallelism.*/
    switch (AT32_FLASH_LINE_SIZE) {
    case 1:
      address[0] = line.b[0];
      break;

    case 2:
      address[0] = line.h[0];
      break;

    case 4:
      address[0] = line.w[0];
      break;

    case 8:
      address[0] = line.w[0];
      address[1] = line.w[1];
      break;

    default:
      osalDbgAssert(false, "invalid line size");
      break;
    }

    at32_flash_wait_busy(devp);
    err = at32_flash_check_errors(devp);
    if (err != FLASH_NO_ERROR) {
      break;
    }
  }

  /* Disabling PGM mode in the controller.*/
  at32_flash_disable_pgm(devp);

  /* Ready state again.*/
  devp->state = FLASH_READY;

  return err;
}

flash_error_t efl_lld_start_erase_all(void *instance) {
  EFlashDriver *devp = (EFlashDriver *)instance;

  osalDbgCheck(instance != NULL);
  osalDbgAssert((devp->state == FLASH_READY) || (devp->state == FLASH_ERASE),
                "invalid state");

  /* No erasing while erasing.*/
  if (devp->state == FLASH_ERASE) {
    return FLASH_BUSY_ERASING;
  }

  /* FLASH_ERASE state while the operation is performed.*/
  devp->state = FLASH_ERASE;

  /* Clearing error status bits.*/
  at32_flash_clear_status(devp);

  /* Bank erase */
  devp->flash->CTRL |= FLASH_CTRL_BANKERS;
  /* Start */
  devp->flash->CTRL |= FLASH_CTRL_ERSTR;

  return FLASH_NO_ERROR;
}

flash_error_t efl_lld_start_erase_sector(void *instance,
                                         flash_sector_t sector) {
  EFlashDriver *devp = (EFlashDriver *)instance;
  const flash_descriptor_t *bank = efl_lld_get_descriptor(instance);
  osalDbgCheck(bank != NULL);
  osalDbgCheck(sector < bank->sectors_count);
  osalDbgAssert((devp->state == FLASH_READY) || (devp->state == FLASH_ERASE),
                "invalid state");

  /* No erasing while erasing.*/
  if (devp->state == FLASH_ERASE) {
    return FLASH_BUSY_ERASING;
  }

  /* FLASH_PGM state while the operation is performed.*/
  devp->state = FLASH_ERASE;

  /* Clearing error status bits.*/
  at32_flash_clear_status(devp);

  /* Write the sector to be erased in the FLASH_ADDRx register; */
  devp->flash->ADDR = (flash_offset_t)bank->address +
                      flashGetSectorOffset(getBaseFlash(devp), sector);

  /* Enable sector erase.*/
  devp->flash->CTRL |= FLASH_CTRL_SECERS;

  /* Start the erase.*/
  devp->flash->CTRL |= FLASH_CTRL_ERSTR;

  return FLASH_NO_ERROR;
}

flash_error_t efl_lld_query_erase(void *instance, uint32_t *msec) {
  EFlashDriver *devp = (EFlashDriver *)instance;
  flash_error_t err;

  /* If there is an erase in progress then the device must be checked.*/
  if (devp->state == FLASH_ERASE) {

    /* Checking for operation in progress.*/
    if ((devp->flash->STS & FLASH_STS_OBF) == 0U) {

      /* Disabling the various erase control bits.*/
      devp->flash->CTRL &= ~(FLASH_CTRL_SECERS |
                             FLASH_CTRL_BLKERS |
                             FLASH_CTRL_BANKERS);

      /* No operation in progress, checking for errors.*/
      err = at32_flash_check_errors(devp);

      /* Back to ready state.*/
      devp->state = FLASH_READY;
    }
    else {
      /* Recommended time before polling again. This is a simplified
         implementation.*/
      if (msec != NULL) {
        *msec = (uint32_t)AT32_FLASH_WAIT_TIME_MS;
      }

      err = FLASH_BUSY_ERASING;
    }
  }
  else {
    err = FLASH_NO_ERROR;
  }

  return err;
}
